<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amhso.visitor.BuycodeActivity">


    <EditText
        android:id="@+id/qty"
        android:hint="@string/qty"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/how_pay"
        android:hint="@string/how_pay"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/description_pay"
        android:hint="@string/description_pay"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/date_pay"
        android:hint="@string/date_pay"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/send"
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
